<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{5eeb6e1b-3578-49b3-8f85-ec5f5e749d55}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	State : INT :=0  ;
	Day  : STRING  ;
	ToTimeoutbool : TON ;
	T1Timer : BOOL ;
	enable : BOOL;
	rTrigenable : R_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[rTrigenable(CLk := enable);

ToTimeoutbool(IN := T1Timer,PT := T#2S);
IF GVL.Morning THEN
	state := 0;
END_IF
	CASE state OF
	0:
		GVL.WakeUp 					:= TRUE;
		T1Timer 					:= TRUE;
		IF ToTimeoutbool.Q THEN
			T1Timer 				:= FALSE;
			GVL.WakeUp 				:= FALSE ;
			state := 1; 
		END_IF
		
	1:
		GVL.MakeTheBed 				:= TRUE;
			T1Timer 				:= TRUE;
		IF ToTimeoutbool.Q THEN
			T1Timer 				:= FALSE;
			GVL.MakeTheBed 			:= FALSE ;
			state := 2;
		END_IF
		
	2:
		GVL.TakeShower 				:= TRUE;
		T1Timer 					:= TRUE;
		IF ToTimeoutbool.Q THEN
			T1Timer := FALSE;
			GVL.TakeShower 			:= FALSE ;
			state := 3;
		END_IF
		
	3:
		GVL.DateCheck				:= TRUE;
		State := 4; 

	4: 
		IF Day = 'Sat' OR Day = 'Sun' THEN
			routine2();
			gvl.SRoutine2 			:= TRUE;
		ELSIF Day = 'Weekdays' THEN
		 	routine1();		
			GVl.SRoutine1 			:= TRUE ;
		END_IF
	
	
		
	END_CASE
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="61" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="98" Count="1" />
      <LineId Id="17" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="66" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="68" Count="3" />
      <LineId Id="95" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="73" Count="3" />
      <LineId Id="96" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="18" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>